<resources>
    <string name="app_name">PE COVID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">ProtectCovid</string>
    <string name="created_with_love">Created With &#9829;</string>
    <string name="title_page3">We hope you enjoy and like this appand hope the information is useful and helpful</string>
    <string name="login">Login</string>
    <string name="signup_or_login">Sign-up or Login</string>
    <string name="label_input_username">Input Username</string>
    <string name="label_input_password">Input Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_member">New member? Sign-up</string>
    <string name="next">Next</string>
    <string name="homepage">Corona Virus</string>
    <string name="variations">Variations</string>
    <string name="prevention">Prevention</string>
    <string name="recovery">Recovery</string>
    <string name="moreinfo">More Info</string>
    <string name="btn_definition">Definition and History</string>
    <string name="title_covid">Variant Covid -19</string>
    <string name="alpha">Variant Alpha</string>
    <string name="beta">Variant Beta</string>
    <string name="gamma">Variant Gamma</string>
    <string name="delta">Variant Delta</string>
    <string name="epsilon">Variant Epsilon</string>
    <string name="zeta">Variant Zeta</string>
    <string name="eta">Variant Eta</string>
    <string name="theta">Variant Theta</string>
    <string name="iota">Variant Iota</string>
    <string name="kappa">Variant Kappa</string>
    <string name="settings">Settings</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="signup">Sign-Up</string>
    <string name="have_account">Already Have Account? Login</string>
    <string name="title1">Covid Variant Alpha</string>
    <string name="penjelasa_covid1">Virus ini adalah varian yang awalnya terdeteksi di Inggris. Alpha memiliki nama lain, seperti varian Kent atau virus B117. Disebutkan jika virus ini setidaknya lebih mudah menular daripada jenis yang pertama kali terdeteksi di China. Pada Oktober silam, strain ini hanya terjadi pada 3 persen dari total kasus di Inggris, tetapi mencapai awal Februari, tercatat sebanyak 96 persen dari jumlah seluruhnya sehingga menimbulkan gelombang ketiga.

Selain itu, data juga menunjukkan jika virus COVID-19 ini sekitar 30–70 persen lebih mematikan dibandingkan yang lainnya. Meski begitu, suatu penelitian menunjukkan jika vaksin AstraZeneca memiliki tingkat efektivitas sebesar 70,4 persen melawan gejala COVID-19 dari varian baru ini. Untuk Pfizer, angkanya mencapai 89,5 persen yang terjadi paling tidak 14 hari setelah penerimaan dosis kedua.</string>
    <string name="title2">Covid Variant Beta</string>
    <string name="penjelasan_covid2">Strain beta ini pertama kali terdeteksi di Afrika Selatan pada awal Oktober dan telah ditemukan di lebih dari 80 negara. Virus ini membawa mutasi yang disebut dengan E484K, yang dapat membantu penyakit ini menghindari sistem kekebalan. Jenis virus yang disebut juga dengan B1351 ini, disebut-sebut tidak bekerja dengan baik pada seseorang yang mendapatkan vaksin AstraZeneca, karena hanya memberikan perlindungan 10 persen terhadap gejala ringan hingga sedang.</string>
    <string name="title3">Covid Variant Gamma</string>
    <string name="penjelasan_covid3">Varian Gamma (P.1) adalah salah satu varian dari SARS-CoV-2, virus penyebab COVID-19. Varian SARS-CoV-2 ini diberi nama garis keturunan P.1 dan memiliki 17 substitusi asam amino, sepuluh di antaranya dalam protein lonjakannya, termasuk tiga yang ditunjuk untuk menjadi perhatian khusus: N501Y, E484K dan K417T. Varian SARS-CoV-2 ini pertama kali terdeteksi oleh National Institute of Infectious Diseases (NIID) Jepang, pada 6 Januari 2021 pada empat orang yang tiba di Tokyo setelah mengunjungi Amazonas, Brasil, empat hari sebelumnya. Kemudian dinyatakan beredar di Brasil. Di bawah skema penamaan yang disederhanakan yang diusulkan oleh Organisasi Kesehatan Dunia, P.1 telah diberi label varian Gamma, dan saat ini dianggap sebagai varian perhatian.

Gamma menyebabkan infeksi yang meluas pada awal tahun 2021 di kota Manaus, ibu kota Amazonas, meskipun kota tersebut telah mengalami infeksi yang meluas pada Mei 2020, dengan sebuah penelitian yang menunjukkan seroprevalensi antibodi yang tinggi untuk SARS-CoV-2  Sebuah artikel penelitian yang diterbitkan dalam Science Journal menunjukkan bahwa orang yang terinfeksi P.1 memiliki peluang lebih besar untuk menularkan dan kematian daripada orang yang terinfeksi B.1.1.28.

Varian Gamma terdiri dari dua subvarian berbeda 28-AM-1 dan 28-AM-2, yang keduanya membawa mutasi K417T, E484K, N501Y, dan keduanya berkembang secara independen satu sama lain dalam wilayah Amazonas Brasil yang sama.

Gamma sangat berbeda dari varian Zeta (garis keturunan P.2) yang juga beredar kuat di Brasil. Secara khusus, Zeta hanya membawa mutasi E484K dan tidak memiliki dua mutasi lain yang menjadi perhatian, N501Y dan K417T.</string>
    <string name="title4">Covid Variant Delta</string>
    <string name="penjelasan_covid4">Varian ini ditemukan di India yang pertama kali terdeteksi pada bulan Oktober, sehingga menyebabkan gelombang kedua yang awalnya telah surut. Jenis virus COVID-19 ini lebih menular dan mampu menghindari respons imun tubuh akibat mutasi yang terjadi. Bahkan, varian ini diperkirakan 40 persen lebih menular dibandingkan jenis Alpha serta strain aslinya.

Disebut-sebut juga jika vaksin kurang efektif untuk melawan varian delta ini. Bahkan, penilaian risiko terbaru menyebut jika ada tingkat ketidakpastian yang tinggi tentang efektivitas AstraZeneca terhadap strain ini meski telah mendapatkan dua dosis. Seseorang yang terinfeksi virus COVID-19 jenis delta lebih berisiko mendapatkan perawatan di rumah sakit dibandingkan jenis Alpha. Maka dari itu, strain ini disebut-sebut yang paling buruk dari semua jenis yang ada.</string>
    <string name="title5">Covid Variant Epsilon</string>
    <string name="penjelasan_covid5">Pertama kali terdeteksi di California pada Juli 2020, varian Amerika Serikat epsilon mulanya dikenal sebagai B.1420 atau CAL.20C. Varian ini terdiri atas beberapa mutasi, antara lain L452R yang khususnya menarik perhatian.

Pusat Pengendalian dan Pencegahan Penyakit Amerika Serikat (CDC) awalnya menyatakan epsilon merupakan Variant of Concern alias butuh perhatian lebih daripada varian lain karena lebih mengkhawatirkan. Pernyataan itu muncul menyusul naiknya jumlah kasus positif Covid-19 secara tiba-tiba pada pertengahan 2020.

Riset awal tentang varian Amerika Serikat epsilon menemukan varian ini 20 persen lebih menular ketimbang virus yang awal. Para ahli secara khusus khawatir terhadap tiga mutasi spesifik dalam protein spike yang digunakan virus untuk masuk dan menempel pada sel lain, lalu menggandakan diri.

Protein spike inilah yang dibuat oleh vaksin untuk melatih sistem imun memproduksi antibodi dan melindungi sel dari infeksi. Karena itu, bila protein spike virus corona berubah karena mutasi, ada kemungkinan vaksin yang menggunakan mRNA kurang efektif mencegah infeksi selanjutnya.

Sebuah studi dari University of Washington, Amerika Serikat, menemukan tiga mutasi itu bisa meredam potensi antibodi dalam aliran darah orang, baik antibodi dari vaksin maupun yang dihasilkan oleh infeksi Covid-19 sebelumnya. Para peneliti mendapati kemampuan antibodi itu untuk menetralkan varian epsilon Amerika Serikat berkurang antara 2 dan 3,5 kali.

Meski demikian, varian ini kemudian tidak lagi dominan, kalah oleh kedatangan varian lain, terutama delta. CDC pun menurunkan status epsilon menjadi Variant of Interest, satu level di bawah Variant of Concern. Badan Kesehatan Dunia (WHO) juga sebelumnya memasukkan varian Amerika Serikat epsilon ke daftar Variant of Interest, tapi sudah mengeluarkannya dari daftar itu pada Juli 2021.</string>
    <string name="title6">Covid Variant Zeta</string>
    <string name="penjelasan_covid6">Varian Zeta, juga dikenal sebagai lineage P.2, adalah varian dari SARS-CoV-2, virus penyebab COVID-19. Ini pertama kali terdeteksi di negara bagian Rio de Janeiro; itu menyimpan mutasi E484K, tetapi bukan mutasi N501Y dan K417T. Ini berkembang secara independen di Rio de Janeiro tanpa berhubungan langsung dengan varian Gamma dari Manaus.

Di bawah skema penamaan yang disederhanakan yang diusulkan oleh Organisasi Kesehatan Dunia, P.2 diberi label "varian Zeta", dan dianggap sebagai varian yang diminati (VOI), tetapi bukan varian yang menjadi perhatian. Gelombang kedua didahului pada November 2020 oleh peningkatan prevalensi varian Zeta di antara sekuens genetik dari negara bagian São Paulo, yang disimpan ke dalam basis data GISAID. Pada Juli 2021, Zeta tidak lagi dianggap sebagai varian yang diminati oleh WHO.</string>
    <string name="title7">Covid Variant Eta</string>
    <string name="penjelasan_covid7">Varian Eta merupakan varian dari SARS-CoV-2, virus penyebab COVID-19. Varian Eta atau garis keturunan B.1.525, juga disebut VUI-21FEB-03 (sebelumnya VUI-202102/03) oleh Public Health England (PHE) dan sebelumnya dikenal sebagai UK1188, 21D atau 20A/S:484K, tidak membawa hal yang sama Mutasi N501Y ditemukan pada Alfa, Beta dan Gamma, tetapi membawa mutasi E484K yang sama seperti yang ditemukan pada varian Gamma, Zeta, dan Beta, dan juga membawa penghapusan H69/ΔV70 yang sama (penghapusan asam amino histidin dan valin pada posisi 69 dan 70) seperti yang ditemukan di Alpha, varian N439K (B.1.141 dan B.1.258) dan varian Y453F (Cluster 5).

Eta berbeda dari semua varian lainnya dengan memiliki mutasi E484K dan mutasi F888L baru (substitusi fenilalanin (F) dengan leusin (L) dalam domain S2 dari protein lonjakan). Pada 5 Maret 2021, telah terdeteksi di 23 negara. Itu juga telah dilaporkan di Mayotte, departemen/wilayah seberang laut Prancis. Kasus pertama terdeteksi pada Desember 2020 di Inggris dan Nigeria, dan pada 15 Februari, kasus tersebut terjadi dengan frekuensi tertinggi di antara sampel di negara terakhir.Pada 24 Februari, 56 kasus ditemukan di Inggris. Denmark, yang mengurutkan semua kasus COVID-19-nya, menemukan 113 kasus varian ini dari 14 Januari hingga 21 Februari, di mana tujuh di antaranya terkait langsung dengan perjalanan luar negeri ke Nigeria.

Pakar Inggris sedang mempelajarinya untuk memahami seberapa besar risikonya. Saat ini dianggap sebagai "varian yang sedang diselidiki", tetapi sambil menunggu studi lebih lanjut, ini mungkin menjadi "varian yang menjadi perhatian". Prof Ravi Gupta, dari University of Cambridge berbicara kepada BBC dan mengatakan garis keturunan B.1.525 tampaknya memiliki "mutasi signifikan" yang sudah terlihat pada beberapa varian baru lainnya, yang sebagian meyakinkan karena kemungkinan efeknya sampai batas tertentu lebih dapat diprediksi. .

Di bawah skema penamaan sederhana yang diusulkan oleh Organisasi Kesehatan Dunia, garis keturunan B.1.525 telah diberi label varian Eta.</string>
    <string name="title8">Covid Variant Theta</string>
</resources>