<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_apps"
    tools:context=".ui.home.HomeFragment">

    <FrameLayout
        android:id="@+id/flFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#20575A"
        app:itemIconTint="#ffff"
        app:itemTextColor="#ffff"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu"/>

    <TextView
        android:id="@+id/corona_title_text"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/interblack"
        android:text="@string/homepage"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/variations_btn"
        android:layout_width="134dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/homepage_button_color"
        android:drawableTop="@drawable/ic_variations_logo"
        android:text="@string/variations"
        android:textColor="@color/homepage_button_color_text"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corona_title_text" />

    <Button
        android:id="@+id/recovery_btn"
        android:layout_width="141dp"
        android:layout_height="112dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/homepage_button_color"
        android:drawableTop="@drawable/ic_recovery_logo"
        android:text="@string/recovery"
        android:textColor="@color/homepage_button_color_text"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definition_btn" />

    <Button
        android:id="@+id/prevention_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/homepage_button_color"
        android:drawableTop="@drawable/ic_prevention_logo"
        android:text="@string/prevention"
        android:textColor="@color/homepage_button_color_text"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/corona_title_text" />

    <Button
        android:id="@+id/moreinfo_btn"
        android:layout_width="134dp"
        android:layout_height="112dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/homepage_button_color"
        android:drawableTop="@drawable/ic_moreinfo_logo"
        android:text="@string/moreinfo"
        android:textColor="@color/homepage_button_color_text"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/definition_btn" />

    <Button
        android:id="@+id/definition_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#196E74"
        android:text="@string/btn_definition"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/variations_btn" />






</androidx.constraintlayout.widget.ConstraintLayout>